--- a/src/components/Slices/ExplanationBlocks.scss
+++ b/src/components/Slices/ExplanationBlocks.scss
@@ -114,7 +114,6 @@
         .count {
           display: block;
           @include h4();
-          text-align: left;
           margin-bottom: 20px;
         }
 
