--- a/src/sass/global/_buttons.scss
+++ b/src/sass/global/_buttons.scss
@@ -34,6 +34,7 @@ button {
     border-radius: 24px;
     transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
     @include h4();
+    text-align: center;
     position: relative;
     transform: translateX(0) translateY(0);
     transition: transform 0.3s ease;
@@ -90,6 +91,7 @@ button {
     border-radius: 24px;
     transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
     @include h4();
+    text-align: center;
     color: $white;
     position: relative;
     transform: translateX(0) translateY(0);
